Ideology Icons Redux, German Federation Mechanic

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -20,3 +20,14 @@
   PB_GER_Prussian_Separatism_desc:0 "Since the defeat of the Prussian Kingdom during the Wars of Austrian Consolidation, the Easternmost territories of the Empire remain the most rebellious. Eastern Germany and Prussia remain a hotbed of ultranationalist sentiments, with the Prussian Freikorps, or Free Corps, a constant problem with the local authorities. These hyper-reactionary militias frequently come into conflict with both the police and leftist political leaders, leading Eastern Germany to gain a reputation for being unstable and dangerous."
   PB_GER_Great_War_Victor:0 "Enough Dead Heroes for the End of Time"
   PB_GER_Great_War_Victor_desc:0 "Germany stood among the victors of the Great War, further cementing the nation as one of the preeminent world powers and finally breaking the perfidious Bourbons. Yet, more than a decade later many are still war weary. Germany suffered tremendous losses throughout the war, with millions laying down their lives in the trenches of Flanders and Alsace to achieve victory. Germany took their place in the son, but for many, there are enough dead heroes buried in Flanders' fields for the end of time."
+
+  ##########################
+  # KINGDOMS MECHANIC
+  ##########################
+  PB_GER_Kingdom_Influence:0 "The State of the Federation"
+  PB_GER_Kingdom_Influence_desc:0 "The United Kingdoms of Germany is a federation of German states, under which many former Austrian-aligned Kingdoms have maintained autonomy under their local rulers. Though once this decentralized system transformed Germany into a center of political thought and culture, now autonomy has become a crutch for the German state. The ongoing economic depression has reignted nationalism in many of the strongest German states, some of whom have begun to entertain ideas of going it alone again.\n\nIn order to pass meaningful reform and centralize the German government, unrest in the major kingdoms must be kept below §Y50%§! in order to pass §YCentralization Reforms§!. These reforms will prevent further unrest and, at least in that regard, stabilize one aspect of German politics.\n\n If any German kingdom's unrest reaches §Y100%§!, then they will begin the process of attempting to secede.\n\n"
+  GER_rhineland_unrest_Tracking:0 "Unrest in the Rhineland is at §Y[?GER.Germany_Rhineland_Unrest]%§!"
+  GER_brandenburg_unrest_Tracking:0 "Unrest in Brandenburg is at §Y[?GER.Germany_Brandenburg_Unrest]%§!"
+  GER_bavaria_unrest_Tracking:0 "Unrest in Bavaria is at §Y[?GER.Germany_Bavaria_Unrest]%§!"
+  GER_saxony_unrest_Tracking:0 "Unrest in Saxony is at §Y[?GER.Germany_Saxony_Unrest]%§!"
+  GER_hannover_unrest_Tracking:0 "Unrest in Hannover is at §Y[?GER.Germany_Hannover_Unrest]%§!"
