--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -4,56 +4,56 @@
  ni_noun:0 "New Imperialism"
  ni_desc:0 "Ultranationalist State"
  NI_VARIANT_01:0 "New Imperialist"
- NI_VARIANT_01_desc:0 "\n Neo-Imperialism is less of a unified ideology and more a set of similar principles shared by different groups. While 19th Century Imperialism was born out of the mission to civilize and a need for resources, New Imperialism was born out of the cultural chaos of the Great War's aftermath. \n\n Unlike a conventional dictatorial system, Neo-Imperialism advocates for the grand expansion of the state to dominate their neighbors both culturally, economically and politically. The concept of cultural dominance is particularly prevalent, as Neo-Imperialists believe in the inherent superiority of their home culture, and often see other cultures as inferior. This often extends to the topic of race, with Neo-Imperialists advocating for obliteration of so-called savage cultures and identities. Though there are naturally variances, Neo-Imperialists are almost invariably violent expansionists with aims on their neighbors and the world at large."
+ NI_VARIANT_01_desc:0 "Neo-Imperialism is less of a unified ideology and more a set of similar principles shared by different groups. While 19th Century Imperialism was born out of the mission to civilize and a need for resources, New Imperialism was born out of the cultural chaos of the Great War's aftermath.\n\nUnlike a conventional dictatorial system, Neo-Imperialism advocates for the grand expansion of the state to dominate their neighbors both culturally, economically and politically. The concept of cultural dominance is particularly prevalent, as Neo-Imperialists believe in the inherent superiority of their home culture, and often see other cultures as inferior. This often extends to the topic of race, with Neo-Imperialists advocating for obliteration of so-called savage cultures and identities. Though there are naturally variances, Neo-Imperialists are almost invariably violent expansionists with aims on their neighbors and the world at large."
  ni_drift:0 "Daily drift towards Neo Imperialism"
 
  ds:0 "Despotism"
  ds_noun:0 "Despotism"
  ds_desc:0 "Despotist State"
  DS_VARIANT_01:0 "Despotism"
- DS_VARIANT_01_desc:0 "\n Despotism is a blanket ideology often ascribed to dictatorships, absolute monarchies and other right-wing authoritarian states. Though they can very wildly in domestic and foreign policy, despotic regimes will always do everything in their power to crush domestic threats to their power. \n\n These regimes are often extremely militaristic, focusing on a mixture of reactionary values and propaganda to encourage an almost fanatically loyal population, or, at the very least, a population unwilling to openly challenge their dictates."
+ DS_VARIANT_01_desc:0 "Despotism is a blanket ideology often ascribed to dictatorships, absolute monarchies and other right-wing authoritarian states. Though they can very wildly in domestic and foreign policy, despotic regimes will always do everything in their power to crush domestic threats to their power.\n\nThese regimes are often extremely militaristic, focusing on a mixture of reactionary values and propaganda to encourage an almost fanatically loyal population, or, at the very least, a population unwilling to openly challenge their dictates."
  ds_drift:0 "Daily drift towards Despotism"
 
  rc:0 "Reactionary"
  rc_noun:0 "Reactionary"
  rc_desc:0 "Reactionary State"
  RC_VARIANT_01:0 "Reactionary"
- RC_VARIANT_01_desc:0 "\n Reactionaries are a distinct form of hyper-conservatives focused on pseudo-authoritarian far right doctrines. Though not always overtly authoritarian, reactionary political parties will attempt to acquire and maintain power through authoritarian means. The ideology group is not particularly unified, however, and there are significant variances between different reactionary factions.\n\n Reactionary groups can vary from simply militaristic conservatives to religious fundamentalists and monarchist cliques, but they share the unifying ideal of rolling back reforms in favor of tradition and dogma. They desire a return to the old days of their nation, and are extremely hostile towards anything that might prevent their restoration of these traditions."
+ RC_VARIANT_01_desc:0 "Reactionaries are a distinct form of hyper-conservatives focused on pseudo-authoritarian far right doctrines. Though not always overtly authoritarian, reactionary political parties will attempt to acquire and maintain power through authoritarian means. The ideology group is not particularly unified, however, and there are significant variances between different reactionary factions.\n\nReactionary groups can vary from simply militaristic conservatives to religious fundamentalists and monarchist cliques, but they share the unifying ideal of rolling back reforms in favor of tradition and dogma. They desire a return to the old days of their nation, and are extremely hostile towards anything that might prevent their restoration of these traditions."
  rc_drift:0 "Daily drift towards Reactionary"
 
  cn:0 "Conservative"
  cn_noun:0 "Conservative"
  cn_desc:0 "Representative State"
  CN_VARIANT_01:0 "Conservative"
- CN_VARIANT_01_desc:0 "\n Conservativism is a prevalent ideology in many nations, advocating for traditionalism and moderate reforms. Conservatives are often dramatically more moderate than their more reactionary counterparts and are far less hostile to reform. Many advocate for slower, steady reforms rather than the dramatic changes purposed by Liberals and State Socialists. \n\n Favoring a mixture of traditional social roles and free market reforms, conservativism is an almost universally prevalent ideology."
+ CN_VARIANT_01_desc:0 "Conservativism is a prevalent ideology in many nations, advocating for traditionalism and moderate reforms. Conservatives are often dramatically more moderate than their more reactionary counterparts and are far less hostile to reform. Many advocate for slower, steady reforms rather than the dramatic changes purposed by Liberals and State Socialists. \n\nFavoring a mixture of traditional social roles and free market reforms, conservativism is an almost universally prevalent ideology."
  cn_drift:0 "Daily drift towards Conservatism"
 
  lb:0 "Liberal"
  lb_noun:0 "Liberal"
  lb_desc:0 "Representative State"
  LB_VARIANT_01:0 "Liberal"
- LB_VARIANT_01_desc:0 "\n Liberalism has been a major political force since the French Reformation and the Springtime of Nations swept Europe in the 1800s. Advocating for social and economic reforms, Liberal factions are found in nearly every democracy on Earth. Liberal factions are, as their name implies, more socially liberal than other ideological groups. Many favour the introduction of suffrage for different racial groups and women.\n\n Liberals are commonplace throughout Europe, and have played pivotal roles in pushing for social liberalization in the grand empires of the continent. While not as revolutionary as it once might have been, Liberalism is still a strong force around the world in the fight for equality."
+ LB_VARIANT_01_desc:0 "Liberalism has been a major political force since the French Reformation and the Springtime of Nations swept Europe in the 1800s. Advocating for social and economic reforms, Liberal factions are found in nearly every democracy on Earth. Liberal factions are, as their name implies, more socially liberal than other ideological groups. Many favour the introduction of suffrage for different racial groups and women.\n\nLiberals are commonplace throughout Europe, and have played pivotal roles in pushing for social liberalization in the grand empires of the continent. While not as revolutionary as it once might have been, Liberalism is still a strong force around the world in the fight for equality."
  lb_drift:0 "Daily drift towards Liberalism"
 
  an:0 "Anarcho-Liberalism"
  an_noun:0 "Anarcho-Liberalism"
  an_desc:0 "Anarcho-Liberalist State"
  AN_VARIANT_01:0 "Anarcho-Liberalism"
- AN_VARIANT_01_desc:0 "\n Anarcho-Liberalism is an ideology strictly focused on free market capitalism. Either representing business friendly factions or factions outright run by businesses, Anarcho-Liberals are an occasionally authoritarian group with a pure focus on acquisition of capital. From the Zaibatsus of the former Japanese Empire to the British East India Company, Anarcho-Liberal factions are commonplace in nations with a focus on so-called Empire Capitalism. \n\n Though deeply disliked by most leftists, Anarcho-Liberals find their support in the boardrooms and businesses of many empires, and will often do anything in their power to continue acquisition of capital."
+ AN_VARIANT_01_desc:0 "Anarcho-Liberalism is an ideology strictly focused on free market capitalism. Either representing business friendly factions or factions outright run by businesses, Anarcho-Liberals are an occasionally authoritarian group with a pure focus on acquisition of capital. From the Zaibatsus of the former Japanese Empire to the British East India Company, Anarcho-Liberal factions are commonplace in nations with a focus on so-called Empire Capitalism.\n\nThough deeply disliked by most leftists, Anarcho-Liberals find their support in the boardrooms and businesses of many empires, and will often do anything in their power to continue acquisition of capital."
  an_drift:0 "Daily drift towards Anarcho-Liberalism"
 
  ss:0 "State Socialism"
  ss_noun:0 "State Socialism"
  ss_desc:0 "Representative State"
  SS_VARIANT_01:0 "State Socialism"
- SS_VARIANT_01_desc:0 "\n State Socialism, often called Bismarckian Socialism, is an ideology of moderate Socialists emulating the welfare policies of Bismarckian Germany. Though the term was used by Bismarck's enemies to mock his policies, many began to use it as a general term for policies similar to those he implemented. State Socialists are sometimes revolutionary socialists, but are not quite as extreme as Jacobins. Many advocate for democratic socialist ideas, such as the creation of welfare states and encouragement of worker's rights. Others are more extreme, such as Bukuninists that push for more Anarcho-Collectivist ideas. \n\n Regardless of specifics, with the continuing march of industrialization, State Socialists will always find their support in the factories and unions of many nations."
+ SS_VARIANT_01_desc:0 "State Socialism, often called Bismarckian Socialism, is an ideology of moderate Socialists emulating the welfare policies of Bismarckian Germany. Though the term was used by Bismarck's enemies to mock his policies, many began to use it as a general term for policies similar to those he implemented. State Socialists are sometimes revolutionary socialists, but are not quite as extreme as Jacobins. Many advocate for democratic socialist ideas, such as the creation of welfare states and encouragement of worker's rights. Others are more extreme, such as Bukuninists that push for more Anarcho-Collectivist ideas.\n\nRegardless of specifics, with the continuing march of industrialization, State Socialists will always find their support in the factories and unions of many nations."
 ss_drift:0 "Daily drift towards State Socialism"
 
  jc:0 "Jacobinism"
  jc_noun:0 "Jacobinism"
  jc_desc:0 "Revolutionary Republic"
  JC_VARIANT_01:0 "Jacobinism"
- JC_VARIANT_01_desc:0 "\n Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad. \n\n Jacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
+ JC_VARIANT_01_desc:0 "Jacobinism is a school of thought that originated in the French Reformation. Originally espoused by Robespierre, modern Jacobins argue for the abolition of all hierachy, not just monarchy. Their principle concern is the creation of a direct democacy, often alongside the creation of a revolutionary vanguard to protect said democracy. In reality, however, this often leads to a far-left authoritarian government. Though progressive socially, Jacobin states are often despotic and militaristic, seeking to spread their revolution abroad.\n\nJacobins foster their support in the poor and defenseless, seeking to galvanize them to overturn the many crowns that pepper the Earth, bringing revolution worldwide."
  jc_drift:0 "Daily drift towards Jacobinism"
 
  ENG_jc_party:0 "BRF"
