State Fixes and Decisions Work

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -383,8 +383,8 @@
  STATE_382:0 "Kkaze"
  STATE_383:1 "East Texas"
  STATE_384:1 "Pawnee"
- STATE_385:0 "Oregon"
- STATE_386:0 "Tacoma"
+ STATE_385:0 "Sur de Oregon"
+ STATE_386:0 "North Oregon"
  STATE_387:0 "Nez Perce"
  STATE_388:0 "Blackfoot"
  STATE_389:0 "Assinibone"
@@ -457,7 +457,7 @@
  STATE_456:0 "Aswan"
  STATE_457:1 "Eastern Desert"
  STATE_458:0 "Tunisia"
- STATE_459:0 "Algiers"
+ STATE_459:0 "Western Algeria"
  STATE_460:0 "Constantine"
  STATE_461:0 "Casablanca"
  STATE_462:0 "Agadir"
@@ -834,3 +834,6 @@
  STATE_833:0 "Southern Abruzzo"
  STATE_834:0 "Parma"
  STATE_835:0 "Modena"
+ STATE_836:0 "New Virginia"
+ STATE_837:0 "Oran"
+ STATE_838:0 "Algiers"
