Fixed America don't @ me

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3476,6 +3476,30 @@
  INA_cn_ADJ:0 "International"
  INA_an_ADJ:0 "International"
  
+ SFE_ni:0 "Santa Fe"
+ SFE_ni_DEF:0 "Santa Fe"
+ SFE_ds:0 "Santa Fe"
+ SFE_ds_DEF:0 "Santa Fe"
+ SFE_rc:0 "Santa Fe"
+ SFE_rc_DEF:0 "The Santa Fe"
+ SFE_an:0 "Santa Fe"
+ SFE_an_DEF:0 "Santa Fe"
+ SFE_cn:0 "Santa Fe"
+ SFE_cn_DEF:0 "Santa Fe"
+ SFE_lb:0 "Santa Fe"
+ SFE_lb_DEF:0 "The Santa Fe"
+ SFE_ss:0 "Santa Fe"
+ SFE_ss_DEF:0 "The Santa Fe"
+ SFE_jc:0 "Santa Fe"
+ SFE_jc_DEF:0 "Santa Fe"
+ SFE_ni_ADJ:0 "Santafeano"
+ SFE_rc_ADJ:0 "Santafeano"
+ SFE_lb_ADJ:0 "Santafeano"
+ SFE_ss_ADJ:0 "Santafeano"
+ SFE_jc_ADJ:0 "Santafeano"
+ SFE_ds_ADJ:0 "Santafeano"
+ SFE_cn_ADJ:0 "Santafeano"
+ SFE_an_ADJ:0 "Santafeano"
 ###################################
 # TEMPLATE
 ###################################
