--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -354,7 +354,6 @@
  VICTORY_POINTS_9814:0 "Los Angeles"
  VICTORY_POINTS_10337:0 "Crosnier"
  VICTORY_POINTS_788:0 "Norfolk"
- VICTORY_POINTS_7821:0 "White Mountain"
  VICTORY_POINTS_1562:0 "San Diego"
  VICTORY_POINTS_1595:0 "Indianapolis"
  VICTORY_POINTS_1690:0 "Spokane"
@@ -393,7 +392,7 @@
  VICTORY_POINTS_12586:0 "Omaha"
  VICTORY_POINTS_12641:0 "Chita"
  VICTORY_POINTS_12735:0 "Birmingham"
- VICTORY_POINTS_12782:0 "Saint-Antoine"
+ VICTORY_POINTS_12782:0 "San Antonio"
  VICTORY_POINTS_13090:0 "Unarasuka"
  VICTORY_POINTS_13091:0 "Novo-Odessa"
  VICTORY_POINTS_3778:0 "Ottawa"
@@ -576,7 +575,7 @@
  VICTORY_POINTS_4879:0 "Windhoek"
  VICTORY_POINTS_10472:0 "Kars"
  VICTORY_POINTS_4512:0 "Diyarbakir"
- VICTORY_POINTS_12552:0 "Yootó"
+ VICTORY_POINTS_12552:0 "Santa Fe"
  VICTORY_POINTS_12124:0 "Coeur d'Alene"
  VICTORY_POINTS_1875:0 "Chungkaske"
  VICTORY_POINTS_10595:0 "Ingyang Okablecha"
@@ -639,3 +638,4 @@
  VICTORY_POINTS_10960:0 "Porto Acre"
  VICTORY_POINTS_4985:0 "Sagallo"
  VICTORY_POINTS_12211:0 "Portland"
+ VICTORY_POINTS_10582:0 "Salt Lake City"
