--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -5,6 +5,30 @@
   ##########################
 
 
+
+
+  ##########################
+  # EVENTS
+  ##########################
+French.1.t:0 "Victory in Frankfurt"
+French.1.d:0 "With the German menace finally pushed back to its capital, French forces were able to swiftly capture the administrative capital of the German Empire. With the fall of Frankfurt, led by the chaos and division plagueing the Germans, several German officials and commanders have proposed negotiations regarding peace and ending our German war effort. With the British still on our tail, a German peace could allow us to focus our attention on the decadent British Empire. The new pro-French government has been established in Munich under the German nationalist Anton Drexler and a group of other French collaborators that are willing to fight against the British empire and liberal democracy."
+French.1.a:0 "Victory at last"
+French.2.t:0 "Appointing a German Commissaire"
+French.2.d:0 "With the establishment of the Nuremberg Protectorate in the former Habsburg lands of Germany, a new question arises on the issue of German leadership. The current head of state, Anton Drexler, was the man to lead the peace treaty between the German collaborators and the French army. However, Drexler, like all German nationalist, is completely insane, corrupted by dark Germanic spells of romantic nationalism and pagan mythology. Many among our German occupation staff even belief that Drexler is the anti-christ himself. Thus, some have started to vouch for a new German head of state to replace Drexler. Several options have become staff favorites, but there has yet to be an official discussion about this change in management."
+French.2.a:0 "Drexler is not the anti-christ, Monsieur..."
+French.2.b:0 "Wilhelm Kube can direct German collaboration"
+French.2.c:0 "Freikorps opposition Walter Stennes can keep Drexler in check"
+French.2.e:0 "Appoint our loyal Maurice Gamelin"
+French.3.t:0 "Anti-French Partisan Movement"
+French.3.d:0 "The recent defeat of the German army and the following peace between the Nuremberg government and France hasn't been popular among most German citizens. Many blame the German nationalists for their loyalty to France, starting the 'stab-in-the-back' myth among most urban citizens. Now, several groups of socialists, liberals and even other nationalists have formed an disunited partisan movement across Germany as to keep the collaboration government from helping the French war effort. These partisan movements have already begun to become a major problem for the collaboration government and many fear all-out revolt if anything bad would ever happen to the French war effort."
+French.3.a:0 "Okay"
+French.4.t:0 "Formation of an Army"
+French.4.d:0 "While the Peace of Nürnberg did disband the standing army, France has recently send us a telegram regarding the status of is in the war. France expects us to support the war effort against Britain and has thus granted us the privilige of a defensive and offensive force, while restricting us regarding the navy and the airforce for now."
+French.4.a:0 "Thanks"
+French.5.t:0 "Peace signed"
+French.5.d:0 "After hours of debate and threats, German diplomat and foreign minister Joachim Ribbentrop gets out of the conference room with a dissapointed look on his face. The news is quickly brought to the government in Nuremberg, detailing the effects of the new treaty regarding the army and the economy. Germany will not be able to field an army for a hundred year period and Germany will pay France 20% of its economic capacity to repay for the damage done."
+French.5.a:0 "Peace without a bit of honour"
+
   ##########################
   # IDEAS
   ##########################
@@ -93,3 +117,69 @@
   PB_FRA_Maurras_Survived_tooltip:0 "§YMaurras survived the attempted coup§!"
   PB_FRA_Doriot_Coup_Succeeded_tooltip:0 "§YDoriot's Coup d'état has succeeded§!"
   PB_FRA_Armand_Counter_Coup_tooltip:0 "§YThe Armandists outmanuevered both factions§!"
+
+  ##########################
+  # FRENCH COLLABORATION IN GERMANY
+  ##########################
+ MGE_ni:0 "Nuremberg Germany"
+ MGE_ni_DEF:0 "Nuremberg Germany"
+ MGE_ds:0 "Nuremberg Germany"
+ MGE_ds_DEF:0 "Nuremberg Germany"
+ MGE_rc:0 "Nuremberg Germany"
+ MGE_rc_DEF:0 "Nuremberg Germany"
+ MGE_an:0 "Nuremberg Germany"
+ MGE_an_DEF:0 "Nuremberg Germany"
+ MGE_cn:0 "Nuremberg Germany"
+ MGE_cn_DEF:0 "Nuremberg Germany"
+ MGE_lb:0 "Nuremberg Germany"
+ MGE_lb_DEF:0 "Nuremberg Germany"
+ MGE_ss:0 "Nuremberg Germany"
+ MGE_ss_DEF:0 "Nuremberg Germany"
+ MGE_jc:0 "German Council Republic"
+ MGE_jc_DEF:0 "German Council Republic"
+ MGE_ni_ADJ:0 "German"
+ MGE_rc_ADJ:0 "German"
+ MGE_lb_ADJ:0 "German"
+ MGE_ss_ADJ:0 "German"
+ MGE_jc_ADJ:0 "German"
+ MGE_ds_ADJ:0 "German"
+ MGE_cn_ADJ:0 "German"
+ MGE_an_ADJ:0 "German"
+
+ MGE_ds_party_long:0 "Französische Militärverwawltung"
+ MGE_ds_party:0 "FM"
+ MGE_ni_party_long:0 "Nationale Kollektive Deutsche Partei"
+ MGE_ni_party:0 "NKDP"
+
+PB_FRA_Partisans:0 "Deutsche Partisanenfront"
+PB_FRA_Partisans_desc:0 "Due to the complete hatred of all Germans for the recent peace without honor against the French Republic, many have turned their heads towards their rifles, fighting a guerilla warfare against the German government in Nuremberg and destroying any supplylines and industry that could help the French war effort in Europe and Africa."
+PB_MGE_German_Forces:0 "German Republican Forces"
+PB_MGE_German_Forces_desc:0 "In an effort to help the French War Effort, the German Republic in Nuremberg has formed a formal republican army. The conscription of all Germans, while effectively enlarging our armed forces, has made the war extremely unpopular in almost every corner of the republic."
+PB_MGE_Peace_1:0 "Peace of Nürnberg"
+PB_MGE_Peace_1_desc:0 "With the final negotiations set, the peace is finalized. Germany shall be completely unable to field a proper army untill the treaty is out of effect and Germany will pay France 20% of its economy to repay for the damage done to the French people during the First and Second Great War."
+
+
+
+
+
+MGE_peace_of_nuremberg:0 "Peace of Nürnberg"
+MGE_the_military:0 "Armed Forces against Victorianism"
+MGE_the_economy:0 "German Workers Front"
+MGE_rebuild_germany:0 "Reconstruct Fort Germany"
+MGE_adress_the_partisan_issue:0 "Adress the Partisan Issue"
+MGE_supply_the_french_war_effort:0 "Supply the French War Effort"
+MGE_heavy_industry_zones:0 "Expand The Brandenburg War Industry"
+MGE_trains_to_paris:0 "Daily Trains to Paris"
+MGE_reconnect_civilian_roads:0 "Reconnect Civilian Roads"
+MGE_redistribute_food_to_civilians:0 "Combat Creeping Famine"
+MGE_wartime_autarky:0 "War Imperialism"
+MGE_search_for_agreement:0 "The Kaiserliche Telegram"
+MGE_crush_partisans:0 "Campaign against Partisans"
+MGE_meeting_at_nuremberg:0 "Unity in Germany?"
+MGE_use_french_renaults:0 "Buy Renault Tanks"
+MGE_expand_upon_artillery_usage:0 "The Singing Guns"
+MGE_french_ace_warfare:0 "Promote Individual Combat"
+MGE_austrian_traditions:0 "Faceless Warfare"
+MGE_one_gun_two_men:0 "Every Two Man a Gun"
+MGE_keep_german_tactics:0 "German Republican Forces"
+MGE_adopt_french_tactics:0 "The Charlamagne Divisions"
