Fiddled with some North American capitals

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -639,3 +639,5 @@
  VICTORY_POINTS_4985:0 "Sagallo"
  VICTORY_POINTS_12211:0 "Portland"
  VICTORY_POINTS_10582:0 "Salt Lake City"
+ VICTORY_POINTS_12721:0 "Ciudad Victoria"
+ VICTORY_POINTS_9637:0 "Monterrey de California"
