--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3500,6 +3500,31 @@
  SFE_ds_ADJ:0 "Santafeano"
  SFE_cn_ADJ:0 "Santafeano"
  SFE_an_ADJ:0 "Santafeano"
+
+ VIN_ni:0 "Vietnam"
+ VIN_ni_DEF:0 "Vietnam"
+ VIN_ds:0 "Vietnam"
+ VIN_ds_DEF:0 "Vietnam"
+ VIN_rc:0 "Vietnam"
+ VIN_rc_DEF:0 "Vietnam"
+ VIN_an:0 "Vietnam"
+ VIN_an_DEF:0 "Vietnam"
+ VIN_cn:0 "Vietnam"
+ VIN_cn_DEF:0 "Vietnam"
+ VIN_lb:0 "Vietnam"
+ VIN_lb_DEF:0 "Vietnam"
+ VIN_ss:0 "Vietnam"
+ VIN_ss_DEF:0 "Vietnam"
+ VIN_jc:0 "Vietnam"
+ VIN_jc_DEF:0 "Vietnam"
+ VIN_ni_ADJ:0 "Vietnamese"
+ VIN_rc_ADJ:0 "Vietnamese"
+ VIN_lb_ADJ:0 "Vietnamese"
+ VIN_ss_ADJ:0 "Vietnamese"
+ VIN_jc_ADJ:0 "Vietnamese"
+ VIN_ds_ADJ:0 "Vietnamese"
+ VIN_cn_ADJ:0 "Vietnamese"
+ VIN_an_ADJ:0 "Vietnamese"
 ###################################
 # TEMPLATE
 ###################################
