--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -837,3 +837,5 @@
  STATE_836:0 "New Virginia"
  STATE_837:0 "Oran"
  STATE_838:0 "Algiers"
+ STATE_839:0 "Ashanti"
+ STATE_840:0 "Northern Vietnam"
