current work done on everything
Basque borders redone, unrest and centralization currently mid-rework, Basque leaders added, Zion national spirit icons, Romanian elections event

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -6,7 +6,7 @@
  GER_ds_DEF:0 "United Kingdoms of Germany"
  GER_rc:0 "United Kingdoms of Germany"
  GER_rc_DEF:0 "The United Kingdoms of Germany"
- GER_an:0 "United Kingdoms of Germany "
+ GER_an:0 "United Kingdoms of Germany"
  GER_an_DEF:0 "United Kingdoms of Germany"
  GER_cn:0 "United Kingdoms of Germany"
  GER_cn_DEF:0 "United Kingdoms of Germany"
@@ -279,8 +279,8 @@
  BSQ_ni_DEF:0 "Basque Republic"
  BSQ_ds:0 "Basque Republic"
  BSQ_ds_DEF:0 "Basque Republic"
- BSQ_rc:0 "Basque Republic"
- BSQ_rc_DEF:0 "Basque Republic"
+ BSQ_rc:0 "Navarre"
+ BSQ_rc_DEF:0 "Navarre"
  BSQ_an:0 "Basque Republic "
  BSQ_an_DEF:0 "Basque Republic"
  BSQ_cn:0 "Basque Republic"
