--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -40,6 +40,8 @@ French.5.a:0 "Peace without a bit of honour"
   PB_FRA_Public_Security_desc:0 "The SP, or Public Security, is the nationalist paramilitary arm of the French Popular Party. Armed and dangerous, they have worked to suppress any other political parties throughout the Republic. Anti-semitic, anti-German and anti-English purges are frequent."
   PB_FRA_Military_SP_Rivalry_Balanced:0 "Military-SP Rivalry Balanced"
   PB_FRA_Military_SP_Rivalry_Balanced_desc:0 " The Military of the Republic and the paramilitary SP have an ongoing rivalry for influence over the government. Both factions seek to curtail the influence of the other to ultimately gain political supremacy. The militarists wish to see resources provided to the SP cut, with many in the upper echelons of the army seeing the SP as little more than thugs. The SP, on the other hand, seeks to increase their political authority and raw military power. Favoring one faction too much over the other could have dangerous political consequences for the government.\n\nThe rivalry is currently §Ybalanced§!."
+ PB_MGE_German_Volunteers:0 "Charlemagne Volunteer Divisions"
+ PB_MGE_German_Volunteers_desc:0 "By only allowing those who belief in the true goals of neo-imperialism to fight in this war, we will guarantee a more equal fighting spirit to the French army. However, this will cut down the possible manpower we can draw upon and threaten our sovereignty as nation even more."
 
   ##########################
   # FOCUS
