--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1001,22 +1001,22 @@
  GUJ_cn_ADJ:0 "Gujarati"
  GUJ_an_ADJ:0 "Gujarati"
 
- PUN_ni:0 "Sikh Empire"
- PUN_ni_DEF:0 "Sikh Empire"
- PUN_ds:0 "Sikh Empire"
- PUN_ds_DEF:0 "Sikh Empire"
- PUN_rc:0 "Sikh Empire"
- PUN_rc_DEF:0 "Sikh Empire"
- PUN_an:0 "Sikh Empire "
- PUN_an_DEF:0 "Sikh Empire"
- PUN_cn:0 "Sikh Empire"
- PUN_cn_DEF:0 "Sikh Empire"
- PUN_lb:0 "Sikh Empire"
- PUN_lb_DEF:0 "Sikh Empire"
- PUN_ss:0 "Sikh Empire"
- PUN_ss_DEF:0 "Sikh Empire"
- PUN_jc:0 "Sikh Empire"
- PUN_jc_DEF:0 "Sikh Empire"
+ PUN_ni:0 "Punjab"
+ PUN_ni_DEF:0 "Punjab"
+ PUN_ds:0 "Punjab"
+ PUN_ds_DEF:0 "Punjab"
+ PUN_rc:0 "Punjab"
+ PUN_rc_DEF:0 "Punjab"
+ PUN_an:0 "Punjab"
+ PUN_an_DEF:0 "Punjab"
+ PUN_cn:0 "Punjab"
+ PUN_cn_DEF:0 "Punjab"
+ PUN_lb:0 "Punjab"
+ PUN_lb_DEF:0 "Punjab"
+ PUN_ss:0 "Punjab"
+ PUN_ss_DEF:0 "Punjab"
+ PUN_jc:0 "Punjab"
+ PUN_jc_DEF:0 "Punjab"
  PUN_ni_ADJ:0 "Punjabi"
  PUN_rc_ADJ:0 "Punjabi"
  PUN_lb_ADJ:0 "Punjabi"
@@ -3525,6 +3525,76 @@
  VIN_ds_ADJ:0 "Vietnamese"
  VIN_cn_ADJ:0 "Vietnamese"
  VIN_an_ADJ:0 "Vietnamese"
+
+ MYS_ni:0 "Kingdom of Mysore"
+ MYS_ni_DEF:0 "Kingdom of Mysore"
+ MYS_ds:0 "Kingdom of Mysore"
+ MYS_ds_DEF:0 "Kingdom of Mysore"
+ MYS_rc:0 "Kingdom of Mysore"
+ MYS_rc_DEF:0 "Kingdom of Mysore"
+ MYS_an:0 "Kingdom of Mysore"
+ MYS_an_DEF:0 "Kingdom of Mysore"
+ MYS_cn:0 "Kingdom of Mysore"
+ MYS_cn_DEF:0 "Kingdom of Mysore"
+ MYS_lb:0 "Kingdom of Mysore"
+ MYS_lb_DEF:0 "Kingdom of Mysore"
+ MYS_ss:0 "Kingdom of Mysore"
+ MYS_ss_DEF:0 "Kingdom of Mysore"
+ MYS_jc:0 "Mysore"
+ MYS_jc_DEF:0 "Mysore"
+
+MAR_ni:0 "Maratha Confederacy"
+MAR_ni_DEF:0 "Maratha Confederacy"
+MAR_ds:0 "Maratha Confederacy"
+MAR_ds_DEF:0 "Maratha Confederacy"
+MAR_rc:0 "Maratha Confederacy"
+MAR_rc_DEF:0 "Maratha Confederacy"
+MAR_an:0 "Maratha Confederacy"
+ MAR_an_DEF:0 "Maratha Confederacy"
+MAR_cn:0 "Maratha Confederacy"
+MAR_cn_DEF:0 "Maratha Confederacy"
+MAR_lb:0 "Maratha Confederacy"
+MAR_lb_DEF:0 "Maratha Confederacy"
+MAR_ss:0 "Maratha Confederacy"
+MAR_ss_DEF:0 "Maratha Confederacy"
+MAR_jc:0 "Maratha Republic"
+MAR_jc_DEF:0 "Maratha Republic"
+
+TRV_ni:0 "Travancore"
+TRV_ds:0 "Travancore"
+TRV_rc:0 "Travancore"
+TRV_an:0 "Travancore"
+TRV_cn:0 "Travancore"
+TRV_lb:0 "Travancore"
+TRV_ss:0 "Travancore"
+TRV_jc:0 "Travancore Republic"
+
+MDR_ni:0 "Tamil Nadu"
+MDR_ds:0 "Mandate of the Carnatic"
+MDR_rc:0 "Mandate of the Carnatic"
+MDR_an:0 "Mandate of the Carnatic"
+MDR_cn:0 "Mandate of the Carnatic"
+MDR_lb:0 "Tamil Nadu Republic"
+MDR_ss:0 "Tamil Nadu Republic"
+MDR_jc:0 "Tamil Nadu Republic"
+
+SKM_ni:0 "Sikkim"
+SKM_ds:0 "Sikkim"
+SKM_rc:0 "Sikkim"
+SKM_an:0 "Sikkim"
+SKM_cn:0 "Sikkim"
+SKM_lb:0 "Sikkim"
+SKM_ss:0 "Sikkim"
+SKM_jc:0 "Republic of Sikkim"
+
+SAN_ni:0 "Sanghli State"
+SAN_ds:0 "Sanghli State"
+SAN_rc:0 "Sanghli State"
+SAN_an:0 "Sanghli State"
+SAN_cn:0 "Sanghli State"
+SAN_lb:0 "Sanghli State"
+SAN_ss:0 "Sanghli State"
+SAN_jc:0 "Sanghli State"
 ###################################
 # TEMPLATE
 ###################################
