French Skeleton Tree Completed

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -111,6 +111,30 @@ French.5.a:0 "Peace without a bit of honour"
   PB_FRA_Pied_Noir_Diplomacy:0 "Contact the Pieds-Noirs"
   PB_FRA_Quebec_Dominion:0 "Reestablish New France"
   PB_FRA_Australie_Dominion:0 "Plebiscite in Australie"
+  PB_FRA_New_Empire:0 "The Empire Resurgent"
+
+  PB_FRA_New_Army:0 "The New French Army"
+  PB_FRA_Armored_Offensive:0 "Leclerc's Armored Offensive"
+  PB_FRA_Artillery_Offensive:0 "Juin's Superior Firepower"
+  PB_FRA_Human_Wave:0 "Gamelin's Cult of the Offensive"
+  PB_FRA_Infantry_Equipment_Research:0 "New Equipment Designs"
+  PB_FRA_Great_War_Lessons:0 "Lessons from the Great War"
+  PB_FRA_Encourage_Officer_Initiative:0 "Encourage Officer Innovation"
+  PB_FRA_Infiltration_Tactics:0 "Infiltrator Tactics"
+  PB_FRA_Bordeaux_Military_Academy:0 "The Bordeaux Military Academy"
+  PB_FRA_Fighter_Focus:0 "Tactical Air Support"
+  PB_FRA_Bomber_Focus:0 "Strategic Air Support"
+  PB_FRA_Paratroopers:0 "Paratrooper Corps"
+  PB_FRA_Firebombing:0 "Terror Bombing"
+  PB_FRA_Tactical_Bombers:0 "Tactical Strikes"
+  PB_FRA_Nuclear_Weapons:0 "Théorie atomique"
+  PB_FRA_Rocket_Weapons:0 "Rocketry Research"
+  PB_FRA_Navy_Expansion:0 "Revive the Imperial Navy"
+  PB_FRA_Retain_Mahan_Doctrine:0 "Retain the Mahan Doctrine"
+  PB_FRA_Submarines:0 "Embrace the Sous-marin"
+  PB_FRA_Marines:0 "Amphibious Assault"
+  PB_FRA_Expand_Dockyards:0 "Expand Dockyards"
+  PB_FRA_Coastal_Defenses:0 "Expand Coastal Defenses"
 
   ##########################
   # TOOLTIPS
