WHOLE LOT OF ITALIAN FOCUS THINGS
Most of the Italian focus tree now has icons and most of the industry part has effects

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -13,6 +13,25 @@ PB_ITA_repay_loans:0 "Repaying Loans"
 PB_ITA_leaving_investors:0 "Fleeing Investors"
 PB_ITA_electoral_process:0 "Process of the Election"
 PB_ITA_electoral_process_desc:0 "The democratic process know as elections has taken Italy into an iron grip, as grown men argue like children on politics. It creates division between friends, who would otherwise drink and seduce hot women together, and unity between rivals, who would otherwise kill eachother for every little thing wrong in their strained relationship. These elections are already quite tense due to the ANI-PSU rivalry and can only get more tense due to political disagreement."
+PB_ITA_grinding_import_1:0 "Adressing the Trade Issue"
+PB_ITA_grinding_import_2:0 "Stimulating Trade"
+PB_ITA_grinding_import_3:0 "Improving Grain Export"
+PB_ITA_balanced_buget:0 "Balanced Budget"
+PB_ITA_balanced_buget_1:0 "Balanced Budget"
+PB_ITA_scrapped_navy:0 "Reduced Naval Focus"
+PB_ITA_scrapped_navy_desc:0 "The recent scrapping of the old vessels of the Italian Regia Marina has reduced the budgetary focus on the navy"
+PB_ITA_economic_recovery:0 "Return to Economic Status Quo"
+PB_ITA_economic_recovery_desc:0 "After intense days of stress and unemployed tension, we've finally reached a point of returning to pre-crisis status quo economically. This return will be the end of the beginning for Italy."
+PB_ITA_competition:0 "Competitive Industrial Culture"
+PB_ITA_more_land:0 "Expanded Agricultural Land"
+PB_ITA_more_land_desc:0 "With the draining of the Pontine Marshes, more land has become available for the poor farmers of Italy to use in their quest to gift Italy with enough grain for bread to feed its population every year."
+PB_ITA_more_land_2:0 "Agricultural Support"
+PB_ITA_more_land_2_desc:0 "As to expand our population and help the regional divide between farmers and workers, the government has started to support poor farmers in their yearly work to feed Italy. Government money now goes to all poor farmers in Sardinia and Sicily as to expand our yearly yield."
+PB_ITA_naval_academy:0 "Genoa Naval Academy"
+
+
+
+
   ##########################
   # PARTIES
   ##########################
@@ -114,6 +133,9 @@ italy.8.b:0 "Default on our Debt"
 italy.35.t:0 "Investors flee from Italy"
 italy.35.d:0 "Our economic reputation has been ruined due to our recent decision to default our enormous debt, forcing several companies to close down their doors due to bankruptcy and showing potential investors that investing in Italy brings great risk. Thus, many potential investors that were supposed to meet our minister of the treasury and the king himself have not shown up in Naples, not willing to invest in such a risk as the Italian kingdom."
 italy.35.a:0 "Such a shame..."
+italy.36.t:0 "Governor opens the Palermo Highway"
+italy.36.d:0 "The local Sicilian governor Cesare Mori and the mayor of Palermo Di Marzo, both having ties with the local ANI branch, recently opened the Palermo highway, a project funded by the Napoli government as to connect the rural island of Sicily between the east and the west. The infrastructure project is, however, not only financially motivated, but also politically: The region of Sicily has always been disconnected from the Italian peninsula due to the strait of Messina, allowing the mafia and separatists to thrive in the region. The new infrastructure layed down could potentially keep the region more connected to its centers and Italy as a whole."
+italy.36.a:0 "Bravo"
   ##########################
   # FOCUSSES
   ##########################
