Currently trying to figure out Italian election mechanics
also added my nations to the bookmark - PS - if anyone knows whats wrong with the localisation for the Italian state elections and why it does not show an increase in variable, please let me know

--- a/localisation/PB_Portugal_l_english.yml
+++ b/localisation/PB_Portugal_l_english.yml
@@ -290,3 +290,5 @@ POR_economic_crash_flag:0 "§YEconomic Crisis hit Portugal§!"
 POR_civil_war_end_MON:0 "§YThe Civil War has ended§!"
 POR_military_junta:0 "§YThe Military Junta has taken power§!"
 POR_nat_synd_popularity:0 "Preto's Influence"
+
+SPR_PAX_BRITANNICA_DESC:0 "The defeat of Spain at the hands of the American/Commonwealth troops in 1910 led to the creation of the Spanish Republic, deposing the former bourbon king in favour of a republican system dominated by the left-wing for its first years. During this political back and forth between the socialists and the conservatives of the republic, radicals were able to seize the opportunity in 1932, launching the Mary Coup and ending the republic. Spain now stands on the path of civil conflict and can possibly fall apart once more. How shall the army lead Spain into the next decade, with bloodshed or understanding?"
