Small Italian and Spanish work

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -473,3 +473,5 @@ ITA_ELECTION_MISSION:0 "§YThe elections of 1933 have passed, leaving us with a 
 
 
 ITA_PAX_BRITANNICA_DESC:0 "The Kingdom of Italy has been relatively stable ever since the Great War compared to the other European powers. While extreme nationalism still exists in the nation, it does not thrive and many people support the healthy democracy that the nation sports. On the worldstage, Italy has grown in importance due to its colonial ambitions and its difficult Anglo-French relationship, leading few politicians to safely bet on Italy in any upcoming conflict, though many do agree that the democracy of Italy will most likely support the liberal world order. However, can Italy survive economic hardship and keep its democracy clear and clean?"
+
+ITA_BAN_REP:0 "§RBans all pro-Republican parties and organisations in the country and starts a witchhunt against the jacobin branch of the blackshirts for their republican sympathies.§!"
