A bunch of fucking shit

--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -52,3 +52,28 @@
  PHI_Insurgency_ds_ADJ:0 "Filipino"
  PHI_Insurgency_cn_ADJ:0 "Filipino"
  PHI_Insurgency_an_ADJ:0 "Filipino"
+
+ BWN_Insurgency_ni:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ni_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ds:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ds_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_rc:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_rc_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_an:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_an_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_cn:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_cn_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_lb:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_lb_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ss:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ss_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_jc:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_jc_DEF:0 "Revolutionary State of New Africa"
+ BWN_Insurgency_ni_ADJ:0 "New African"
+ BWN_Insurgency_rc_ADJ:0 "New African"
+ BWN_Insurgency_lb_ADJ:0 "New African"
+ BWN_Insurgency_ss_ADJ:0 "New African"
+ BWN_Insurgency_jc_ADJ:0 "New African"
+ BWN_Insurgency_ds_ADJ:0 "New African"
+ BWN_Insurgency_cn_ADJ:0 "New African"
+ BWN_Insurgency_an_ADJ:0 "New African"
