--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3620,6 +3620,56 @@ SAN_jc:0 "Sanghli State"
  PHI_ds_ADJ:0 "Filipino"
  PHI_cn_ADJ:0 "Filipino"
  PHI_an_ADJ:0 "Filipino"
+
+ FSA_ni:0 "Free States Alliance"
+ FSA_ni_DEF:0 "Free States Alliance"
+ FSA_ds:0 "Free States Alliance"
+ FSA_ds_DEF:0 "Free States Alliance"
+ FSA_rc:0 "Free States Alliance"
+ FSA_rc_DEF:0 "Free States Alliance"
+ FSA_an:0 "Free States Alliance"
+ FSA_an_DEF:0 "Free States Alliance"
+ FSA_cn:0 "Free States Alliance"
+ FSA_cn_DEF:0 "Free States Alliance"
+ FSA_lb:0 "Free States Alliance"
+ FSA_lb_DEF:0 "Free States Alliance"
+ FSA_ss:0 "Free States Alliance"
+ FSA_ss_DEF:0 "Free States Alliance"
+ FSA_jc:0 "Free States Alliance"
+ FSA_jc_DEF:0 "Free States Alliance"
+ FSA_ni_ADJ:0 "Southerner"
+ FSA_rc_ADJ:0 "Southerner"
+ FSA_lb_ADJ:0 "Southerner"
+ FSA_ss_ADJ:0 "Southerner"
+ FSA_jc_ADJ:0 "Southerner"
+ FSA_ds_ADJ:0 "Southerner"
+ FSA_cn_ADJ:0 "Southerner"
+ FSA_an_ADJ:0 "Southerner"
+
+ BWN_ni:0 "Free People's Republic of New Africa"
+ BWN_ni_DEF:0 "Free People's Republic of New Africa"
+ BWN_ds:0 "Free People's Republic of New Africa"
+ BWN_ds_DEF:0 "Free People's Republic of New Africa"
+ BWN_rc:0 "Free People's Republic of New Africa"
+ BWN_rc_DEF:0 "Free People's Republic of New Africa"
+ BWN_an:0 "Free People's Republic of New Africa"
+ BWN_an_DEF:0 "Free People's Republic of New Africa"
+ BWN_cn:0 "Free People's Republic of New Africa"
+ BWN_cn_DEF:0 "Free People's Republic of New Africa"
+ BWN_lb:0 "Free People's Republic of New Africa"
+ BWN_lb_DEF:0 "Free People's Republic of New Africa"
+ BWN_ss:0 "Free People's Republic of New Africa"
+ BWN_ss_DEF:0 "Free People's Republic of New Africa"
+ BWN_jc:0 "Free People's Republic of New Africa"
+ BWN_jc_DEF:0 "Free People's Republic of New Africa"
+ BWN_ni_ADJ:0 "New African"
+ BWN_rc_ADJ:0 "New African"
+ BWN_lb_ADJ:0 "New African"
+ BWN_ss_ADJ:0 "New African"
+ BWN_jc_ADJ:0 "New African"
+ BWN_ds_ADJ:0 "New African"
+ BWN_cn_ADJ:0 "New African"
+ BWN_an_ADJ:0 "New African"
 ###################################
 # TEMPLATE
 ###################################
