--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -32,6 +32,19 @@
   PB_GER_Strike_at_Unemployment:0 "End the Unemployment Crisis"
   PB_GER_Restore_Market_Confidence:0 "Restore Confidence in the Market"
   PB_GER_The_German_Miracle:0 "The German Miracle"
+  PB_GER_Encourage_Ruhr_Industry:0 "Expand Industry in the Ruhr"
+  PB_GER_Electrification_Campaign:0 "Electrify the Nation"
+  PB_GER_Vienna_Technical_Institute:0 "The Vienna Technical Institute"
+  PB_GER_Mining_Plan:0 "Blood and Iron"
+  PB_GER_German_Farms:0 "Expand German Farming"
+  PB_GER_Bavarian_Arms_Explosion:0 "Bavarian Arms Industry"
+  PB_GER_Paneuropean_Research:0 "Pan-European Research Committee"
+  PB_GER_Fireside_Chats:0 "Kamingespräche"
+  PB_GER_Beacon_of_Industry:0 "A Beacon of Industry"
+  PB_GER_Civilian_Factories:0 "Expand Civilian Industry"
+  PB_GER_Military_Factories:0 "Military Industrial Complex"
+  PB_GER_Beacon_of_Science:0 "A Beacon of Knowledge"
+  PB_GER_Beacon_of_Europe:0 "A Beacon of Militarism"
 
   PB_GER_New_Blood:0 "It's Time for New Blood"
   PB_GER_Zentrum:0 "Zentrum at the Helm"
@@ -95,6 +108,11 @@
   PB_GER_Resistance_Contacts:0 "Contact the Resistance"
   PB_GER_Join_Allies:0 "Restore the Imperial Powers"
   PB_GER_Universal_Conscription:0 "Every Man Must Do His Duty"
+  PB_GER_Great_Crusade:0 "The Great Crusade"
+  PB_GER_Territorial_Compromises:0 "Compromises for Assistance"
+  PB_GER_Armed_Women:0 "Break the Gender Stigma"
+  PB_GER_Improvised_Weapons:0 "Import Anything We Can"
+  PB_GER_Liberation:0 "The Liberation"
 
   ##########################
   # KINGDOMS MECHANIC
