--- a/localisation/PB_Japan_l_english.yml
+++ b/localisation/PB_Japan_l_english.yml
@@ -14,3 +14,13 @@
   PB_JAP_Sakurakai_desc:0 "	Whispers abound in smokey back rooms of a society dedicated to a return to the revolutionary principles that Hashimoto betrayed. Formed of an alliance of disenchanted lefitsts, this so-called Cherry Blossom Society seeks to overthrow the Hashimoto government and create a more democratic Japan."
   PB_JAP_Reactionary_Plot:0 "Reactionary Plot?"
   PB_JAP_Reactionary_Plot_desc:0 "Despite the Imperial government being overthrown more than a decade ago, there are still some that harbor sentiments with the Emperor. Should enough chaos erupt in the Republic, such elements in our society may seek to reinstate the old Imperial family."
+
+  ##########################
+  # FOCUSES
+  ##########################
+  PB_Future_of_Republic:0 "The Future of the Republic"
+
+  ##########################
+  # TOOLTIPS
+  ##########################
+  PB_JAP_Bombing_tooltip:0 "§YThe Tokyo Riots have Broken Out§!"
