Initial Poland Tree and Polish Loc Fix

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -117,7 +117,7 @@
  POL_jc_party_long:0 "Narodowy Związek Robotników"
  POL_ss_party:0 "PPS"
  POL_ss_party_long:0 "Polska Partia Socjalistyczna"
- POL_lb_party_:0 "C"
+ POL_lb_party:0 "C"
  POL_lb_party_long:0 "Centrolew"
  POL_cn_party:0 "CP"
  POL_cn_party_long:0 "Chejno-Piast"
